fix grid spacing

--- a/src/components/ExteriorSquare/ExteriorSquare.css
+++ b/src/components/ExteriorSquare/ExteriorSquare.css
@@ -5,9 +5,9 @@
     display: grid;
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto auto;
-    grid-gap: .6rem;
-    justify-content: center;
-    align-items: center;
+    grid-gap: .3rem;
+    justify-content: stretch;
+    align-items: stretch;
 }
 
 .played {
@@ -15,19 +15,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 6rem;
+    font-size: 9rem;
     height: 20vw;
     width: 20vw;
 }
-
-/* .current {
-    background-color: var(--bright-green);
-    width: 20vw;
-    height: 20vw;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
-    grid-gap: .6rem;
-    justify-content: center;
-    align-items: center;
-} */
