--- a/src/components/Gameboard/Gameboard.css
+++ b/src/components/Gameboard/Gameboard.css
@@ -5,5 +5,5 @@
     grid-template-rows: auto auto auto;
     justify-content: center;
     align-content: center;
-    grid-gap: 1rem;
+    grid-gap: .8rem;
 }
